k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: community-forum
spec:
  type: NodePort
  selector:
    app: community-forum
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4567
